updata for color selection

--- a/http_server/js/style.css
+++ b/http_server/js/style.css
@@ -85,7 +85,7 @@ fieldset.mode#ModeAuto {
 	width: 30px;
 	height: 20px;	
   }
- #lzUp{
+ #Tong{
 	position: fixed;
 	top: 340px;
 	left:230px;
@@ -97,7 +97,7 @@ fieldset.mode#ModeAuto {
 	width: 30px;
 	height: 20px;	
   }
- #setZ{
+ #setTT{
 	position: fixed;
 	top: 340px;
 	left:270px;
